<resources>
    <string name="app_name">Project 1</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_account_label">Create Account</string>
    <string name="login_label">Login</string>
    <string name="catch_pokemon_label">Catch Pokemon</string>
    <string name="view_pokemon_label">View Pokemon</string>
	<string name="view_berries_label">View Berries</string>
	<string name="logout_label">Logout</string>
	<string name="delete_account_label">Delete Account</string>
	<string name="confirm_label">Confirm</string>
	<string name="select_label">Select</string>
</resources>